Point frontend to Render API

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
   </div>
 
   <script>
-    const API_URL = 'http://127.0.0.1:8000/chat'; // ako promijeniš port/host, promijeni ovdje
+    const API_URL = 'https://hephos-ai-chatbot.onrender.com/chat';
+ // ako promijeniš port/host, promijeni ovdje
     const form = document.getElementById('form');
     const input = document.getElementById('input');
     const msgs = document.getElementById('msgs');
