--- a/index.html
+++ b/index.html
@@ -5,24 +5,17 @@
   <title>Hephos AI Assistant — Premium</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="color-scheme" content="dark" />
+  <!-- Favicon (koristi isti logo) -->
+  <link rel="icon" type="image/png" href="logo.png"/>
   <style>
     :root{
-      --emerald:#023020;         /* glavna zelena */
-      --emerald-2:#0e2e25;
-      --emerald-3:#10231d;
-      --gold:#D4AF37;            /* zlatna */
-      --gold-2:#e8c95c;
-      --text:#F5F7F6;            /* bijela */
-      --muted:#c7d3cd;           /* sivo-zelena */
-      --panel:rgba(10,26,21,.55);/* glass */
-      --stroke:rgba(212,175,55,.25);
-      --ai:#0f1f18;              /* AI bubble */
-      --me:#133b2f;              /* User bubble */
-      --shadow:0 30px 80px rgba(0,0,0,.45);
+      --emerald:#023020; --emerald-2:#0e2e25; --emerald-3:#10231d;
+      --gold:#D4AF37; --gold-2:#e8c95c; --text:#F5F7F6; --muted:#c7d3cd;
+      --panel:rgba(10,26,21,.55); --stroke:rgba(212,175,55,.25);
+      --ai:#0f1f18; --me:#133b2f; --shadow:0 30px 80px rgba(0,0,0,.45);
       --ring:0 0 0 1px rgba(212,175,55,.25), 0 0 30px rgba(212,175,55,.12);
     }
-    *{box-sizing:border-box}
-    html,body{height:100%}
+    *{box-sizing:border-box} html,body{height:100%}
     body{
       margin:0; color:var(--text);
       font:16px/1.6 Inter, ui-sans-serif, system-ui, "Segoe UI", Roboto, Arial, sans-serif;
@@ -35,16 +28,17 @@
     /* Top bar */
     .nav{
       position:sticky; top:0; z-index:20;
-      display:flex; align-items:center; justify-content:center;
-      gap:12px; padding:14px 16px;
+      display:flex; align-items:center; justify-content:center; gap:12px;
+      padding:12px 16px;
       background:linear-gradient(180deg, rgba(2,48,32,.9), rgba(2,48,32,.6));
       border-bottom:1px solid rgba(212,175,55,.15);
       box-shadow:0 8px 30px rgba(0,0,0,.35);
       backdrop-filter:saturate(130%) blur(10px);
     }
-    .logo-dot{
-      width:12px; height:12px; border-radius:999px; background:var(--gold);
-      box-shadow:0 0 18px rgba(212,175,55,.75);
+    .nav-left{position:absolute; left:16px; display:flex; align-items:center; gap:10px}
+    .logo{height:28px; width:auto; display:block;
+      /* ako je logo mračan/na tamnoj pozadini, odkomentiraj sljedeći red za posvjetljivanje: */
+      /* filter: brightness(1000%) contrast(95%); */
     }
     .brand{font-weight:700; letter-spacing:.6px}
     .tag{padding:4px 8px; border-radius:999px; font-size:12px; color:#111;
@@ -53,36 +47,35 @@
       box-shadow:0 6px 20px rgba(212,175,55,.35);
     }
 
-    /* Shell */
-    .container{
-      max-width:1000px; margin:28px auto; padding:0 16px;
-      display:grid; grid-template-columns:1fr; gap:18px;
-    }
-    .hero{
-      display:flex; align-items:center; justify-content:space-between; gap:16px; flex-wrap:wrap;
+    .container{ max-width:1000px; margin:28px auto; padding:0 16px; display:grid; gap:18px }
+    .hero{ display:flex; align-items:center; justify-content:space-between; flex-wrap:wrap; gap:16px;
       padding:18px 20px; border:1px solid var(--stroke); border-radius:16px;
       background:linear-gradient(180deg, rgba(15,33,26,.65), rgba(10,26,21,.45));
       box-shadow:var(--shadow); backdrop-filter:blur(10px);
     }
     .hero h1{margin:0; font-weight:800; letter-spacing:.4px}
     .hero p{margin:4px 0 0; color:var(--muted); font-size:14px}
-    .hero .cta{
-      display:flex; gap:10px; align-items:center; flex-wrap:wrap;
-    }
     .chip{border:1px solid var(--stroke); color:var(--muted);
-      padding:8px 10px; border-radius:999px; font-size:12px; background:rgba(16,35,29,.35)
+      padding:8px 10px; border-radius:999px; font-size:12px; background:rgba(16,35,29,.35); margin-left:8px
     }
 
-    /* Chat card */
     .card{
-      height:72vh; min-height:520px;
+      height:72vh; min-height:520px; position:relative;
       border:1px solid var(--stroke); border-radius:18px; overflow:hidden;
       background:linear-gradient(180deg, rgba(16,35,29,.55), rgba(10,26,21,.45));
       backdrop-filter:blur(10px); box-shadow:var(--shadow);
       display:flex; flex-direction:column;
     }
-    .card-head{
-      display:flex; align-items:center; justify-content:space-between; gap:10px;
+    /* watermark logo u pozadini chata */
+    .card::before{
+      content:""; position:absolute; inset:0; pointer-events:none;
+      background:
+        radial-gradient(400px 400px at 85% 20%, rgba(212,175,55,.08), transparent 60%),
+        url('logo.png') center/240px auto no-repeat;
+      opacity:.06; filter:grayscale(100%) brightness(200%);
+    }
+
+    .card-head{ display:flex; align-items:center; justify-content:space-between; gap:10px;
       padding:14px 16px; border-bottom:1px solid var(--stroke);
       background:linear-gradient(180deg, rgba(16,35,29,.65), rgba(16,35,29,.35));
     }
@@ -90,21 +83,17 @@
     .dot{width:8px; height:8px; border-radius:50%; background:#43d38d; box-shadow:0 0 12px #43d38d}
 
     .msgs{flex:1; overflow:auto; padding:18px; display:flex; flex-direction:column; gap:12px}
-    .msg{
-      max-width:78%; padding:12px 14px; border-radius:14px; position:relative;
-      animation:fadeIn .2s ease; word-wrap:break-word; white-space:pre-wrap;
-    }
+    .msg{ max-width:78%; padding:12px 14px; border-radius:14px; position:relative;
+      animation:fadeIn .2s ease; word-wrap:break-word; white-space:pre-wrap }
     .ai{ align-self:flex-start; background:var(--ai); border:1px solid var(--stroke) }
     .me{ align-self:flex-end; background:var(--me); border:1px solid rgba(212,175,55,.18) }
     .msg small{ display:block; opacity:.65; font-size:11px; margin-top:6px }
-
     .typing{ display:flex; gap:6px; align-items:center; align-self:flex-start; padding:10px 12px;
       background:var(--ai); border:1px dashed var(--stroke); border-radius:12px }
-    .typing i{ width:6px; height:6px; border-radius:999px; background:var(--gold); opacity:.8; animation:bounce 1.2s infinite }
+    .typing i{ width:6px; height:6px; border-radius:999px; background:var(--gold); opacity:.85; animation:bounce 1.2s infinite }
     .typing i:nth-child(2){ animation-delay:.15s } .typing i:nth-child(3){ animation-delay:.3s }
 
-    .card-foot{
-      border-top:1px solid var(--stroke); padding:12px; display:flex; gap:10px;
+    .card-foot{ border-top:1px solid var(--stroke); padding:12px; display:flex; gap:10px;
       background:linear-gradient(0deg, rgba(16,35,29,.6), rgba(16,35,29,.35));
     }
     input{
@@ -119,28 +108,29 @@
       color:#111; font-weight:700; letter-spacing:.3px; cursor:pointer; transition:.22s;
       box-shadow:0 12px 30px rgba(212,175,55,.28);
     }
-    button:hover{ transform:translateY(-1px) }
-    button:active{ transform:translateY(0) }
+    button:hover{ transform:translateY(-1px) } button:active{ transform:translateY(0) }
 
     .footnote{margin:14px auto 28px; text-align:center; color:var(--muted); font-size:12px}
 
     @keyframes fadeIn{ from{opacity:0; transform:translateY(6px)} to{opacity:1; transform:none} }
-    @keyframes bounce{
-      0%,60%,100%{ transform:translateY(0); opacity:.7 }
-      30%{ transform:translateY(-4px); opacity:1 }
-    }
+    @keyframes bounce{ 0%,60%,100%{ transform:translateY(0); opacity:.7 } 30%{ transform:translateY(-4px); opacity:1 } }
 
     @media (max-width:720px){
       .container{ margin:18px auto }
       .card{ height:70vh; min-height:500px }
       .msg{ max-width:88% }
       .hero{ padding:14px 16px }
+      .nav-left{display:none}
     }
   </style>
 </head>
 <body>
   <div class="nav">
-    <span class="logo-dot"></span>
+    <div class="nav-left">
+      <!-- LOGO U HEADERU -->
+      <img src="logo.png" alt="Hephos AI logo" class="logo" />
+      <span style="font-weight:700">Hephos AI</span>
+    </div>
     <span class="brand">Hephos AI Solutions</span>
     <span class="tag">Premium AI Chatbot</span>
   </div>
@@ -149,9 +139,9 @@
     <section class="hero">
       <div>
         <h1>Hephos AI Assistant</h1>
-        <p>Smart. Fast. Automated. — Elegant emerald × gold interface.</p>
+        <p>Smart. Fast. Automated. — Emerald × Gold premium interface.</p>
       </div>
-      <div class="cta">
+      <div>
         <span class="chip">GPT-4o-mini</span>
         <span class="chip">Multi-language</span>
         <span class="chip">API Integrations</span>
@@ -178,16 +168,14 @@
   </main>
 
   <script>
-    const API_URL = 'https://hephos-ai-chatbot.onrender.com/chat'; // <-- zamijeni svojim Render URL-om
+    const API_URL = 'https://hephos-ai-chatbot.onrender.com/chat'; // promijeni na svoj Render URL
 
     const msgs = document.getElementById('msgs');
     const inp  = document.getElementById('input');
     const btn  = document.getElementById('send');
 
-    function timeNow(){
-      const d = new Date();
-      return d.toLocaleTimeString([], {hour:'2-digit', minute:'2-digit'});
-    }
+    function timeNow(){ return new Date().toLocaleTimeString([], {hour:'2-digit', minute:'2-digit'}); }
+    function escapeHtml(s){ return s.replace(/[&<>"']/g, m => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#039;'}[m])); }
 
     function addMsg(text, who='ai'){
       const div = document.createElement('div');
@@ -197,43 +185,21 @@
       msgs.scrollTop = msgs.scrollHeight;
       return div;
     }
-
     function addTyping(){
-      const wrap = document.createElement('div');
-      wrap.className = 'typing';
-      wrap.innerHTML = '<i></i><i></i><i></i>';
-      msgs.appendChild(wrap);
-      msgs.scrollTop = msgs.scrollHeight;
-      return wrap;
-    }
-
-    function escapeHtml(s){
-      return s.replace(/[&<>"']/g, m => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#039;'}[m]));
+      const wrap = document.createElement('div'); wrap.className='typing';
+      wrap.innerHTML='<i></i><i></i><i></i>'; msgs.appendChild(wrap); msgs.scrollTop = msgs.scrollHeight; return wrap;
     }
 
     async function sendMessage(){
-      const text = inp.value.trim();
-      if(!text) return;
-      addMsg(text,'me');
-      inp.value = '';
-      const typing = addTyping();
-
+      const text = inp.value.trim(); if(!text) return;
+      addMsg(text,'me'); inp.value=''; const typing = addTyping();
       try{
-        const r = await fetch(API_URL, {
-          method:'POST',
-          headers:{'Content-Type':'application/json'},
-          body: JSON.stringify({ message: text })
-        });
-        const data = await r.json();
-        typing.remove();
+        const r = await fetch(API_URL, { method:'POST', headers:{'Content-Type':'application/json'}, body: JSON.stringify({ message: text }) });
+        const data = await r.json(); typing.remove();
         addMsg(data.response || data.error || 'No response','ai');
-      }catch(err){
-        typing.remove();
-        addMsg('⚠️ Connection error. Please try again.','ai');
-      }
+      }catch{ typing.remove(); addMsg('⚠️ Connection error. Please try again.','ai'); }
       msgs.scrollTop = msgs.scrollHeight;
     }
-
     btn.addEventListener('click', sendMessage);
     inp.addEventListener('keydown', e => { if(e.key==='Enter'){ e.preventDefault(); sendMessage(); }});
   </script>
